# Projects

./: .dockerignore  .gitignore  README.md  pyproject.toml
deploy/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh
finbot/: agent.py  api.py  config.py
finbot/.adk/: session.db
finbot/explainer/: agent.py  prompts.py
finbot/explainer/tools/: rag.py
finbot/portfolio/: agent.py  prompts.py  schema.sql
finbot/portfolio/tools/: pnl.py
finbot/shared/: callbacks.py  state_keys.py
finbot/stock_health/: __init__.py  agent.py  prompts.py  scoring.py
finbot/stock_health/.adk/: session.db
finbot/stock_health/tools/: search_tools.py  yf_tools.py
finbot/stock_health/tools/.adk/: session.db
finbot/stock_health/tools/.ipynb_checkpoints/: yf_tools-checkpoint.py
finbot/stocks_details/: __init__.py  agent.py  prompts.py
finbot/stocks_details/.adk/: session.db
finbot/stocks_details/tools/: search_tools.py  yf_tools.py
frontend/: .env.local.example  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
rag_tool/: __init__.py  cli.py  config.py  gcs_store.py  models.py  utils.py
rag_tool/generation/: __init__.py  generator.py
rag_tool/ingestion/: __init__.py  chunking.py  embeddings.py  hashing.py  loaders.py  manifest.py  pipeline.py  sparse.py
rag_tool/provisioning/: __init__.py  vector_index.py
rag_tool/retrieval/: __init__.py  vector_search.py
