[project]
name = "finbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "yfinance>=1.3.0",
    "pandas>=2.0.0",
    "pandas-ta>=0.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.0",
    "diskcache>=5.6.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "google-cloud-aiplatform>=1.90.0",
    "google-cloud-storage>=2.19.0",
    "joblib>=1.4.2",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finbot", "rag_tool"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: live network calls, requires FINBOT_INTEGRATION_TESTS=1",
]
